Update configuration files to some sane defaults

--- a/minecraft/.env.example
+++ b/minecraft/.env.example
@@ -1,4 +1,46 @@
+SERVER_NAME=TheGamingHouseCommunity
+MOTD="The Gaming House's Community Server"
+ANNOUNCE_PLAYER_ACHIEVEMENTS=true
+
+# Server and Performance Settings
 VERSION=LATEST
 TYPE=PAPER
 PAPERBUILD=121
+MAX_PLAYERS=20
+MAX_BUILD_HEIGHT=256
+MAX_WORLD_SIZE=10000
+MAX_TICK_TIME=60000
+VIEW_DISTANCE=10
+ALLOW_FLIGHT=FALSE
+MEMORY=2G
+ENABLE_ROLLING_LOGS=true
 HOST_MINECRAFT_PORT=25565
+
+# Administration Settings
+ENABLE_RCON=true
+ENABLE_WHITELIST=true
+ONLINE_MODE=true
+FORCE_GAMEMODE=false
+SNOOPER_ENABLED=false
+
+# Gameplay Settings
+ALLOW_NETHER=true
+ENABLE_COMMAND_BLOCK=true
+SPAWN_ANIMALS=true
+SPAWN_MONSTERS=true
+SPAWN_NPCS=true
+SPAWN_PROTECTION=0
+MODE=survival
+PVP=true
+LEVEL=world
+DIFFICULTY=normal
+
+# World Generation Settings
+GENERATE_STRUCTURES=true
+SEED=xxxxxxxxxx
+LEVEL_TYPE=DEFAULT
+
+# Passwords and other private information
+WHITELIST=Relsk
+OPS=Relsk
+RCON_PASSWORD=xxxxxxxxxx
