Add Major as ops

--- a/minecraft/.env.example
+++ b/minecraft/.env.example
@@ -41,6 +41,6 @@ SEED=xxxxxxxxxx
 LEVEL_TYPE=DEFAULT
 
 # Passwords and other private information
-WHITELIST=Relsk
-OPS=Relsk
+WHITELIST=Relsk,maj0rPhas3r
+OPS=Relsk,maj0rPhas3r
 RCON_PASSWORD=xxxxxxxxxx
