--- a/minecraft/.env.example
+++ b/minecraft/.env.example
@@ -15,6 +15,7 @@ ALLOW_FLIGHT=FALSE
 MEMORY=2G
 ENABLE_ROLLING_LOGS=true
 HOST_MINECRAFT_PORT=25565
+HOST_BEDROCK_PORT=19132
 
 # Administration Settings
 ENABLE_RCON=true
