Update configs to enable Geyser

--- a/minecraft/.env.example
+++ b/minecraft/.env.example
@@ -20,7 +20,7 @@ HOST_BEDROCK_PORT=19132
 # Administration Settings
 ENABLE_RCON=true
 ENABLE_WHITELIST=true
-ONLINE_MODE=true
+ONLINE_MODE=false
 FORCE_GAMEMODE=false
 SNOOPER_ENABLED=false
 
