--- a/minecraft/.env.example
+++ b/minecraft/.env.example
@@ -38,7 +38,7 @@ DIFFICULTY=normal
 
 # World Generation Settings
 GENERATE_STRUCTURES=true
-SEED="-4060839488929676108"
+# SEED="-4060839488929676108"
 LEVEL_TYPE=DEFAULT
 
 # Passwords and other private information
