--- a/minecraft/plugins/Geyser-Spigot/config.yml
+++ b/minecraft/plugins/Geyser-Spigot/config.yml
@@ -43,10 +43,10 @@ remote:
   # For plugin versions, if address has been set to "auto", the port will also follow the server's listening port.
   port: 25565
   # Authentication type. Can be offline, online, or floodgate (see https://github.com/GeyserMC/Floodgate/wiki).
-  auth-type: offline
+  auth-type: floodgate
   # Allow for password-based authentication methods through Geyser. Only useful in online mode.
   # If this is false, users must authenticate to Microsoft using a code provided by Geyser on their desktop.
-  allow-password-authentication: false
+  allow-password-authentication: true
   # Whether to enable PROXY protocol or not while connecting to the server.
   # This is useful only when:
   # 1) Your server supports PROXY protocol (it probably doesn't)
