Change Geyser port back to 19132 and expose it from docker

--- a/minecraft/docker-compose.yaml
+++ b/minecraft/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
     restart: unless-stopped
     ports:
       - "${HOST_MINECRAFT_PORT}:25565"
+      - "${HOST_BEDROCK_PORT}:19132"
     volumes:
       - ./minecraft-data:/data
       - ./plugins:/data/plugins
