--- a/minecraft/.env.example
+++ b/minecraft/.env.example
@@ -15,12 +15,12 @@ ALLOW_FLIGHT=FALSE
 MEMORY=2G
 ENABLE_ROLLING_LOGS=true
 HOST_MINECRAFT_PORT=25565
-HOST_BEDROCK_PORT=25565
+HOST_BEDROCK_PORT=19132
 
 # Administration Settings
 ENABLE_RCON=true
 ENABLE_WHITELIST=true
-ONLINE_MODE=false
+ONLINE_MODE=true
 FORCE_GAMEMODE=false
 SNOOPER_ENABLED=false
 
