--- a/minecraft/docker-compose.yaml
+++ b/minecraft/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     restart: unless-stopped
     ports:
       - "${HOST_MINECRAFT_PORT}:25565"
-      - "${HOST_BEDROCK_PORT}:19132"
+      - "${HOST_BEDROCK_PORT}:19132/udp"
     volumes:
       - ./minecraft-data:/data
       - ./plugins:/data/plugins
