Update Geyser again

--- a/minecraft/.env.example
+++ b/minecraft/.env.example
@@ -1,5 +1,5 @@
 SERVER_NAME=TheGamingHouseCommunity
-MOTD="The Gaming House's Community Server"
+MOTD="The Gaming House Community Server"
 ANNOUNCE_PLAYER_ACHIEVEMENTS=true
 
 # Server and Performance Settings
