--- a/minecraft/plugins/Geyser-Spigot/config.yml
+++ b/minecraft/plugins/Geyser-Spigot/config.yml
@@ -104,7 +104,7 @@ forward-player-ping: false
 max-players: 20
 
 # If debug messages should be sent through console
-debug-mode: true
+debug-mode: false
 
 # Thread pool size
 general-thread-pool: 32
