--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ minecraft/plugins/WorldEdit/sessions/
 minecraft/plugins/WorldGuard/cache/
 minecraft/plugins/WorldGuard/worlds/
 minecraft/plugins/bStats/
+minecraft/plugins/dynmap/web/tiles/faces/
+minecraft/plugins/dynmap/web/tiles/world/
+minecraft/plugins/dynmap/web/tiles/world_nether/
+minecraft/plugins/LuckPerms/luckperms-h2.mv.db
+
