Update configs to remove variables that shouldnt be public

--- a/minecraft/docker-compose.yaml
+++ b/minecraft/docker-compose.yaml
@@ -7,12 +7,17 @@ services:
     env_file: .env
     environment:
       EULA: "TRUE"
+      REPLACE_ENV_VARIABLES: "TRUE"
+      ENV_VARIABLE_PREFIX: "CONFIG_"
+      ENABLE_ROLLING_LOGS: true
+      USE_AIKAR_FLAGS: true
     tty: true
     stdin_open: true
     restart: unless-stopped
     ports:
       - "${HOST_MINECRAFT_PORT}:25565"
       - "${HOST_BEDROCK_PORT}:19132/udp"
+      - "${HOST_DYNMAP_PORT}:8123"
     volumes:
       - ./minecraft-data:/data
       - ./plugins:/data/plugins
