--- a/minecraft/plugins/Essentials/config.yml
+++ b/minecraft/plugins/Essentials/config.yml
@@ -91,7 +91,8 @@ force-safe-teleport-location: false
 teleport-passenger-dismount: true
 
 # The delay, in seconds, required between /home, /tp, etc.
-teleport-cooldown: 43200
+# teleport-cooldown: 43200
+teleport-cooldown: 300
 
 # The delay, in seconds, before a user actually teleports. If the user moves or gets attacked in this timeframe, the teleport is cancelled.
 teleport-delay: 20
