--- a/minecraft/.env.example
+++ b/minecraft/.env.example
@@ -16,6 +16,7 @@ MEMORY=2G
 ENABLE_ROLLING_LOGS=true
 HOST_MINECRAFT_PORT=25565
 HOST_BEDROCK_PORT=19132
+HOST_DYNMAP_PORT=8123
 
 # Administration Settings
 ENABLE_RCON=true
