Try to fix config issues

--- a/minecraft/docker-compose.yaml
+++ b/minecraft/docker-compose.yaml
@@ -11,6 +11,14 @@ services:
       ENV_VARIABLE_PREFIX: "CONFIG_"
       ENABLE_ROLLING_LOGS: "true"
       USE_AIKAR_FLAGS: "true"
+      VERSION: "LATEST"
+      TYPE: "PAPER"
+      MEMORY: "2G"
+      CONFIG_DISCORD_BOT_TOKEN: ${CONFIG_DISCORD_BOT_TOKEN}
+      CONFIG_DISCORD_SERVER_ID: ${CONFIG_DISCORD_SERVER_ID}
+      CONFIG_DISCORD_PRIMARY_CHANNEL_ID: ${CONFIG_DISCORD_PRIMARY_CHANNEL_ID}
+      CONFIG_DISCORD_STAFF_CHANNEL_ID: ${CONFIG_DISCORD_STAFF_CHANNEL_ID}
+      CONFIG_MOTD_LINE: ${CONFIG_MOTD_LINE}
     tty: true
     stdin_open: true
     restart: unless-stopped
