--- a/minecraft/.env.example
+++ b/minecraft/.env.example
@@ -3,17 +3,12 @@ MOTD="The Gaming House Community Server"
 ANNOUNCE_PLAYER_ACHIEVEMENTS=true
 
 # Server and Performance Settings
-VERSION=LATEST
-TYPE=PAPER
-PAPERBUILD=121
 MAX_PLAYERS=20
 MAX_BUILD_HEIGHT=256
 MAX_WORLD_SIZE=10000
 MAX_TICK_TIME=60000
 VIEW_DISTANCE=10
 ALLOW_FLIGHT=FALSE
-MEMORY=2G
-ENABLE_ROLLING_LOGS=true
 HOST_MINECRAFT_PORT=25565
 HOST_BEDROCK_PORT=19132
 HOST_DYNMAP_PORT=8123
@@ -43,6 +38,12 @@ GENERATE_STRUCTURES=true
 LEVEL_TYPE=DEFAULT
 
 # Passwords and other private information
-WHITELIST=Relsk,maj0rPhas3r
-OPS=Relsk,maj0rPhas3r
+WHITELIST=xxxxx
+OPS=xxxxx
 RCON_PASSWORD=xxxxxxxxxx
+
+CONFIG_DISCORD_BOT_TOKEN=xxxxxxxxxx
+CONFIG_DISCORD_SERVER_ID=xxxxxxxxxx
+CONFIG_DISCORD_PRIMARY_CHANNEL_ID=xxxxxxxxxx
+CONFIG_DISCORD_STAFF_CHANNEL_ID=xxxxxxxxxx
+CONFIG_MOTD_LINE=xxxxxxxxxx
