--- a/satisfactory/docker-compose.yml
+++ b/satisfactory/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: 'satisfactory-server'
     hostname: 'satisfactory.kirillian.tv'
     image: 'wolveix/satisfactory-server:latest'
+    env_file:
+    - .env
     ports:
       - '7777:7777/udp'
       - '15000:15000/udp'
